--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,500|Roboto:700,700i&display=swap&subset=chinese-traditional");
-@import url("Noto_Sans_TC/NotoSansTC-Medium.otf");
-@import url("Noto_Sans_TC/NotoSansTC-Light.otf");
 * {
   box-sizing: border-box;
+  font-family: "Noto Sans TC", "Roboto", "Arial", "Helvetica", "sans-serif";
 }
 
 html, body {
@@ -32,7 +30,7 @@ html, body {
   margin-top: 160px;
 }
 .beginPage .btn {
-  font-family: "Noto+Sans+TC", "Noto_Sans_TC", "NotoSansTC", "Roboto";
+  font-family: "Noto Sans TC", "Roboto", "Arial", "Helvetica", "sans-serif";
   font-size: 36px;
   background-color: #15B0BF;
   color: #27123E;
@@ -79,7 +77,7 @@ html, body {
   display: inline-block;
   color: #15B0BF;
   padding: 30px 0;
-  font-family: "Noto Sans TC";
+  font-family: "Noto Sans TC", "Roboto", "Arial", "Helvetica", "sans-serif";
   font-weight: 400;
   line-height: 48px;
 }
@@ -248,7 +246,7 @@ html, body {
   padding: 0 200px;
 }
 .btnBar .navbtn {
-  font-family: "Noto+Sans+TC", "Noto_Sans_TC", "NotoSansTC", "Roboto";
+  font-family: "Noto Sans TC", "Roboto", "Arial", "Helvetica", "sans-serif";
   font-size: 24px;
   background-color: #15B0BF;
   color: #27123E;
@@ -375,14 +373,14 @@ html, body {
 .popupPage .content .text {
   display: inline-block;
   margin-top: 10px;
-  font-family: "Noto+Sans+TC", "Noto_Sans_TC", "NotoSansTC", "Roboto";
+  font-family: "Noto Sans TC", "Roboto", "Arial", "Helvetica", "sans-serif";
   font-size: 24px;
   line-height: 48px;
   color: #15B0BF;
   text-align: center;
 }
 .popupPage .content .btn {
-  font-family: "Noto+Sans+TC", "Noto_Sans_TC", "NotoSansTC", "Roboto";
+  font-family: "Noto Sans TC", "Roboto", "Arial", "Helvetica", "sans-serif";
   font-size: 28px;
   background-color: #15B0BF;
   color: #27123E;
@@ -413,6 +411,7 @@ html, body {
 .popupPage .content .btn-close {
   display: inline-block;
   margin-top: 20px;
+  font-family: "Noto Sans TC", "Roboto", "Arial", "Helvetica", "sans-serif";
   font-size: 14px;
   line-height: 24px;
   color: #15B0BF;
