--- a/style.scss
+++ b/style.scss
@@ -1,16 +1,10 @@
-
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,500|Roboto:700,700i&display=swap&subset=chinese-traditional');
-@import url('Noto_Sans_TC/NotoSansTC-Medium.otf');
-@import url('Noto_Sans_TC/NotoSansTC-Light.otf');
-
-
 $bg-color:#27123E;
 $btn-color:#15B0BF;
 $login-color:#EF6278;
 
 
 @mixin btn($size,$width,$height) {
-    font-family: "Noto+Sans+TC","Noto_Sans_TC","NotoSansTC","Roboto";
+    font-family: 'Noto Sans TC','Roboto','Arial', 'Helvetica', 'sans-serif';
     font-size: $size;
     background-color: $btn-color;
     color: $bg-color;
@@ -40,6 +34,7 @@ $login-color:#EF6278;
 // *****************************************************
 *{
     box-sizing: border-box;
+    font-family: 'Noto Sans TC','Roboto','Arial', 'Helvetica', 'sans-serif';
 }
 html,body{
     margin: 0;
@@ -105,7 +100,7 @@ html,body{
         display: inline-block;
         color: $btn-color;
         padding:30px 0;
-        font-family: 'Noto Sans TC';
+        font-family: 'Noto Sans TC','Roboto','Arial', 'Helvetica', 'sans-serif';
         font-weight: 400;
         line-height: 48px;
     }
@@ -347,7 +342,7 @@ html,body{
         .text{
             display: inline-block;
             margin-top: 10px;
-            font-family: "Noto+Sans+TC","Noto_Sans_TC","NotoSansTC","Roboto";
+            font-family: 'Noto Sans TC','Roboto','Arial', 'Helvetica', 'sans-serif';
             font-size: 24px;
             line-height: 48px;
             color: $btn-color;
@@ -374,7 +369,7 @@ html,body{
         .btn-close{
             display: inline-block;
             margin-top: 20px;
-            // font-family: "Noto+Sans+TC","Noto_Sans_TC","NotoSansTC","Roboto";
+            font-family: 'Noto Sans TC','Roboto','Arial', 'Helvetica', 'sans-serif';
             font-size: 14px;
             line-height: 24px;
             color: $btn-color;
