--- a/style.css
+++ b/style.css
@@ -274,16 +274,17 @@ html, body {
 .topsection .leftCardDeck, .topsection .rightCardDeck {
   display: flex;
   position: absolute;
-  bottom: 10px;
+  bottom: 8px;
   width: 460px;
   height: 160px;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 .topsection .leftCardDeck .deck, .topsection .rightCardDeck .deck {
   width: 100px;
   height: 150px;
   position: relative;
+  transition: all 0.3s;
 }
 .topsection .leftCardDeck .cardbox0, .topsection .rightCardDeck .cardbox0 {
   top: 0;
@@ -325,6 +326,7 @@ html, body {
   width: 100px;
   height: 150px;
   position: relative;
+  transition: all 0.3s;
 }
 .medsection .deck > .cardbox0 {
   top: 0;
@@ -335,6 +337,7 @@ html, body {
   top: 40px;
   height: 150px;
   width: 100px;
+  transition: all 0.1s;
 }
 
 .popupPage {
@@ -461,6 +464,47 @@ html, body {
 
 .dragging {
   opacity: 0.5;
+}
+
+.hover:hover {
+  filter: drop-shadow 0px 0px 10px rgba(255, 255, 255, 0.5);
+  -webkit-filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
+  -moz-filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
+}
+
+.enterEffect {
+  filter: drop-shadow 0px 0px 10px rgba(255, 255, 255, 0.5);
+  -webkit-filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
+  -moz-filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
+}
+
+.deckEnterEffect {
+  height: 125px !important;
+  box-shadow: 1px 1px 10px 5px rgba(255, 255, 255, 0.5) inset;
+}
+
+@keyframes wave {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes newEffect {
+  0% {
+    left: -1000px;
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  100% {
+    left: 0px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
